tests/type-error/coverage/ZipWith.vix
type List a = Nil | Cons a (Ptr (List a))

zipWith f (Ref Nil) (Ref Nil) = Ref Nil
zipWith f (Ref (Cons x xs)) (Ref (Cons y ys)) = Ref (Cons (f x y) (zipWith f xs ys))
